--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "WEBNAME",
-  "name": "WEBNAME",
+  "short_name": "EDUNOW",
+  "name": "EDUNOW",
   "icons": [
     {
       "src": "favicon.ico",
